--- a/index.html
+++ b/index.html
@@ -95,31 +95,39 @@ html, body {
 /* ===== DAY TABS ===== */
 .day-tabs {
   display: flex;
-  gap: 4px;
+  gap: 6px;
   overflow-x: auto;
   scrollbar-width: none;
   -ms-overflow-style: none;
-  padding-bottom: 2px;
+  padding-bottom: 4px;
+  padding-top: 2px;
 }
 
 .day-tabs::-webkit-scrollbar { display: none; }
 
 .day-tab {
   flex-shrink: 0;
-  background: transparent;
-  border: none;
-  color: var(--text3);
+  background: var(--surface2);
+  border: 1px solid var(--border);
+  color: var(--text2);
   font-family: 'JetBrains Mono', monospace;
-  font-size: 11px;
+  font-size: 12px;
   font-weight: 600;
-  padding: 6px 12px;
-  border-radius: 6px;
+  padding: 10px 16px;
+  border-radius: 8px;
   cursor: pointer;
   transition: all 0.2s;
   position: relative;
+  -webkit-tap-highlight-color: rgba(74, 222, 128, 0.2);
+  touch-action: manipulation;
+  user-select: none;
+  min-height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.day-tab.active { color: var(--accent); background: rgba(74, 222, 128, 0.1); }
+.day-tab.active { color: var(--accent); background: rgba(74, 222, 128, 0.15); border-color: var(--accent); }
 .day-tab.has-data::after {
   content: '';
   position: absolute;
